# optithru

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  HowTo.md  PROMPT.md  bootstrap.sh  docker-compose.yml  install-week2.sh  nginx.conf  nginx.conf.https  start-dev.sh
backend/: .env  Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: cache.py  logging.py  scheduler.py
backend/app/middleware/: api_key_auth.py
backend/app/routers/: ai_insights.py  anomalies.py  billing.py  calculations.py  feedback.py  health.py  invites.py  kanban.py  marketplace.py  public_api.py  reports.py  shopify.py  shopify_oauth.py  woocommerce.py
backend/app/schemas/: toc.py
backend/app/services/: ai_insights.py  amazon_sync.py  anomaly_detector.py  email_service.py  meesho_sync.py  shopify_sync.py  toc_engine.py  woocommerce_sync.py
backend/tests/: test_anomaly_detector.py  test_marketplace.py  test_toc_engine.py
docs/: Throughput_OS__A_PoC_Blueprint_for_TOC-Based_Professional_Services_Profitability_SaaS.md  Throughput_OS__Theory_of_Constraints_Blueprint_for_Shankara_Beauty_E-Commerce_Optimization.md  throughput-os-setup-prompt.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/: middleware.ts
poc-toc-week5/: week5-index.md
poc-toc-week5/cards/: 71-production-stability-feedback.md  72-ai-insights-engine.md  73-self-serve-onboarding-shopify-oauth.md  77-changelog-whats-new.md  (+9 more)
scripts/: fetch-shankara-products.ts  generate-mock-data.ts
supabase/: .gitignore  config.toml  docker-compose.yml
(+133 files in other folders)
