[project]
name = "throughput-os-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "supabase>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "numpy>=2.0.0",
    "httpx>=0.27.0",
    "reportlab>=4.0.0",
    "stripe>=8.0.0",
    "structlog>=24.0.0",
    "slowapi>=0.1.9",
    "apscheduler>=3.10.0",
    "resend>=2.0.0",
    "jinja2>=3.1.0",
    "anthropic>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "pytest-asyncio>=0.24.0",
]
